Fix `get started pages` text misalignment

--- a/app/style/Tutorial.less
+++ b/app/style/Tutorial.less
@@ -52,6 +52,10 @@
     min-height: 33em;
     line-height: 19px;
 
+    div {
+      margin: 1px;
+    }
+
     h1 {
       color: var(--tutorial-header);
       font-size: 35px;
@@ -59,6 +63,7 @@
       column-span: all;
       font-weight: 400;
       -webkit-margin-before: 0px;
+      margin-bottom: 30px;
     }
 
     strong {
@@ -67,10 +72,11 @@
 
     p {
       break-inside: avoid-column;
+      margin-bottom: 10px;
     }
 
     ul {
-      margin: 0em 2em 2em -3.1em;
+      margin: 0 2em 2em 2em;
     }
   }
 
